@@ -1,3 +1,8 @@
+2005-06-08  Sebastian Rahtz  <rahtz@spqr-ibm>
+
+	* guidelines-print.xsl: fix bugs in customization of odd2html to
+	do with heading numbering
+
 2005-05-28  Lou Burnard 
 	* Source/MS/*.odd Check in changes to MS chapter received from MJD
 	after checking that they parse
